--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ Template.png
 WorldofZuul/nbproject/project.properties
 WorldofZuul/nbproject/private/private.properties
 WorldofZuul/WorldofZuul.iml
+WorldofZuul/nbproject/private/retriever/catalog.xml
+WorldofZuul/nbproject/private/private.properties
