One time use (#11)
* Made multiplayer-framework

Game:
Har flyttet play metoden ind i multiplayer for at kunne ændre i spillet gang ude fra selve spillet.
Play:
Starter fra multiplayerclasses
Multiplayer:
Har oprettet multiplayer og har oprettet 2 spilfunktioner.

* Update .gitignore

* Updated Multiplayer and startmenu

Play:
Gjort så man kan vælge mellem multiplayer og singleplayer ved en tekst
Game: Ændret så spillet kan køre uden multiplayer classen
Multiplayer: Har ændret lidt, så det skifter ikke spiller lige nu, men skal tilføjes på en god måde iforhold til spiller oplevelses.

* Updated multiplayer with endturn command and limit on moves

CommandWord:
Tilføjet 'endturn' kommando
Game:
Tilføjet at du kun kan bevæge dig 3 gange i multiplayer, men singleplayer stadig kan bevæge frit og tilføjet metoden til at skfite spiller
Multiplayer:
Der kan skiftet spiller nu.

* Updated Multiplayer, fixed goRoom command

Der lå en fejl i goRoom metoden, den tog ikke værdien command, men en tekst istedet og har flyttet printwelcome i multiplayer, så den vises for begge spillere

* Updated Multiplayer

Har fjernet printwelcome, da det ikke virkede som hensigten

* Update Multiplayer.java

* Added OneTimeUse items

Vi har implenteret OneTimeUse items og gjort at det itemet bliver fjernet efter det er brug og bonus bliver fjernet efter at have besejret et monster.

* Resettet character

Karakter er ikke OP længere. (Beklager)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 /ZuL/nbproject/private/
 /WorldofZuul/build/
 /WorldofZuul/dist/
+WorldofZuul/.idea/libraries/dist.xml
+WorldofZuul/.idea/misc.xml
+WorldofZuul/.idea/modules.xml
+WorldofZuul/.idea/vcs.xml
+WorldofZuul/.idea/workspace.xml
+WorldofZuul/nbproject/private/config.properties
+WorldofZuul/nbproject/private/private.properties
+WorldofZuul/nbproject/private/private.xml
+WorldofZuul/nbproject/project.properties
+Template.png
+WorldofZuul/nbproject/project.properties
+WorldofZuul/nbproject/private/private.properties
+WorldofZuul/WorldofZuul.iml
+WorldofZuul/nbproject/private/retriever/catalog.xml
+WorldofZuul/nbproject/private/private.properties
