Refactored some Code and added a multiplayer function to help eachother
Har tilføjet en metode, som kan bruge til at hjælpe den anden spiller med sit level.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ WorldofZuul/nbproject/private/private.properties
 WorldofZuul/WorldofZuul.iml
 WorldofZuul/nbproject/private/retriever/catalog.xml
 WorldofZuul/nbproject/private/private.properties
+WorldofZuul/nbproject/project.properties
+WorldofZuul/nbproject/private/private.properties
